--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -93,5 +98,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
