--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,15 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
 spring.datasource.platform=h2
 
 ############################################
-
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:db/init-database.sql
+spring.sql.init.mode=always
+#spring.datasource.schema=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=true
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure.condition.ConditionEvaluationReportLogger=ERROR
