--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -18,7 +18,7 @@ spring.datasource.platform=h2
 ############################################
 
 spring.datasource.initialization-mode=always
-#spring.datasource.schema=classpath:db/init-database.sql
+#spring.datasource.schema=classpath:db/schema.sql
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.boot.autoconfigure.condition.ConditionEvaluationReportLogger=ERROR
 
